Fourth commit More thorough testing